--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ghore-gari-react-app",
+  "name": "ghorer-gari-react-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
