--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.4.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.545.0",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
